增加新页面

--- a/src/style.less
+++ b/src/style.less
@@ -1,6 +1,7 @@
 [class^="el-icon-fa"], [class*=" el-icon-fa"] {
   display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome!important;
+  font: normal normal normal 14px/1 ;
+  font-family: FontAwesome!important;
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -19,3 +20,6 @@ body{
 }
 @import url("../node_modules/font-awesome/less/font-awesome");
 @fa-css-prefix: el-icon-fa;
+@base-color: #409EFF;
+@container-bg-color:#E9E9EB;
+@color-bg-white:#fff;
