--- a/src/style.less
+++ b/src/style.less
@@ -8,9 +8,7 @@
   -moz-osx-font-smoothing: grayscale;
 };
 html {
-  min-height: 100%;
-  _height:100%;
-  height:100%;
+  margin:0;padding:0;height:100%;min-height: 100%;
 }
 body{
   margin:0;padding:0;height:100%;overflow:hidden;min-height: 100%;
